Home Page & About Section Overlapping Fixed

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,4 @@
 .home_container{
-    height: 100vh;
     box-sizing: border-box;
     padding: 8rem 0rem 5rem 0rem;
 }
